Finalizo septima sección

--- a/index.html
+++ b/index.html
@@ -320,6 +320,12 @@
         </div>
      </div>
 </section>
+<section>
+    <div class="septima">
+        <h1>Interesado en trabajar conmigo?</h1>
+        <button><a href="#verContacto"><strong>Contratame!</strong></a></button>
+    </div>
+</section>
 
 
            
