Encuentro error en responsive de movil

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2>Hola, soy un freelancer</h2>
                 <h1>SOY PROGRAMADOR!</h1>
                 <h3>Viviendo en Buenos Aires - Argentina</h3>
-                <div>
+                <div class="botones">
                     <a href="" class="boton1">MIS TRABAJOS</a>
                     <a href="" class="boton2" href="#verContacto"> <strong>Contactame </strong>  <i class="bi bi-arrow-down-circle estilo"></i></a></div>
                 <div class="flecha">
