finalizo cuarta seccion responsive

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
 <body>
- 
+ <!-- 
     <header>
         <h3> MIGUEL LOPEZ</h3>
          <nav>
@@ -26,25 +26,33 @@
             <a href="https://twitter.com/Leugimzepol?t=0rvajltvXgwrJBj1gNMxJA&s=09" target="_blank"><i class="bi bi-twitter estilo"></i></a>
         </div>
         <i class="bi bi-list hamburguesa"></i>
-     </header> 
+     </header>  -->
     <main>
-        <section id="verConoceme" class="segunda">
-            <div class="encabezado">
-                <p>Acerca de mi</p>
-                <h2><strong>Conoceme mas.</strong></h2>
+      <section class="tabla">
+        <div class="tabladatos">
+            <div class="tabladatos1">
+                <div>
+                <h3 class="titulos">Nombre:</h3>
+                <h3>Miguel López</h3>
+                </div> 
+                <div>
+                <h3 class="titulos">Email:</h3>
+                <h3><span>miguellopez32@gmail.com</span></h3>
+                </div>
             </div>
-            <div class="segundabis">
-                
-                    <div class="textos">
-                        <h2>Hola, soy <span>Miguel López</span></h2>
-                        <p>Soy un diseñador y desarrollador apasionado por el diseño web. Disfruto desarrollando sitios web simples, limpios y elegantes que brindan un valor real al usuario final. Miles de clientes han obtenido resultados excepcionales trabajando conmigo. Entregar el trabajo dentro del tiempo y el presupuesto que cumpla con los requisitos del cliente es nuestro lema.</p>
-                    </div>
-                    <div class="experiencia1">
-                        <h1>2</h1>
-                        <h4>Años de experiencia.</h4>
-                    </div>   
-        </section>
-
+        
+            <div class="tabladatos2">
+                <div>
+                <h3 class="titulos">Fecha de nacimiento:</h3>
+                <h3>28 de agosto 1973</h3>
+                </div> 
+                <div>
+                <h3 class="titulos">País:</h3>
+                <h3>Argentina</h3>
+                </div>
+            </div>
+        </div>
+      </section>  
 
 
     </main>
