Corregido errores de responsive hasta cuarta sección

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                 <div class="educacion">
                     <div><h2 class="subtitulo">Mi educación</h2></div>
                     <div class="miEducación">
-                        <h2>Diplomatura en Programación Web</h2>
+                        <h2>Programación Web en UTN</h2>
                         <h3>UTN Argentina / 2022 - 2023</h3>
-                        <h5>Conocimientos en HTML, CSS, React, JavaScript, Github y programación orientado a objetos</h5>
+                        <h5>Diplomatura en HTML, CSS, React, JavaScript, Github, Bootstrap y programación orientado a objetos.</h5>
                     </div>
                     <div class="miEducación">
                         <h2>Inversor Profesional de Mercados</h2>
@@ -177,15 +177,15 @@
                 <div class="experiencia">
                     <div><h2 class="subtitulo">Mi experiencia</h2></div>
                     <div class="miExperiencia">
-                        <h2>Merchant Unilever</h2>
-                        <h3>Unilever de A.S.A / 1999 - 2020</h3>
+                        <h2>Merchant para Unilever de A.S.A.</h2>
+                        <h3>Unilever de A.S.A./ 1999 - 2020</h3>
                         <h5>Más de 20 años avalan mi experiencia en cadenas de hipermercados, supermercados y sus diversos clusters.</h5></div>
                         <div class="miExperiencia">
-                        <h2>Administrativo Clusters</h2>
+                        <h2>Administrativo Clusters para Unilever Argentina</h2>
                         <h3>Unilever de A.S.A  / 2002 - 2003</h3>
-                        <h5>Trabajo intensivo en diseño de frentes de góndolas para cualquier segmento según su correspondiente share.</h5></div>
+                        <h5>Trabajo intensivo en diseño de frentes de góndolas para cualquier segmento dependiendo de su correspondiente share.</h5></div>
                         <div class="miExperiencia">
-                        <h2>Manejo de stocks y ventas via apps</h2>
+                        <h2>Manejo de stocks y ventas</h2>
                         <h3>INC S.A. / 2015 - 2019</h3>
                         <h5>El control, el pedido y la actualización ante quiebres de productos via internet.</h5></div> 
                 </div>
