Finalizo responsive quinta seccion

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>     
         </section>
 
-
+<!-- Cuarta seccion -->
 
         <section id="verResumen" class="cuarta">
             <div>
@@ -181,7 +181,7 @@
                         <h3>Unilever de A.S.A./ 1999 - 2020</h3>
                         <h5>Más de 20 años avalan mi experiencia en cadenas de hipermercados, supermercados y sus diversos clusters.</h5></div>
                         <div class="miExperiencia">
-                        <h2>Administrativo Clusters para Unilever Argentina</h2>
+                        <h2>Administrativo Clusters para  Unilever</h2>
                         <h3>Unilever de A.S.A  / 2002 - 2003</h3>
                         <h5>Trabajo intensivo en diseño de frentes de góndolas para cualquier segmento dependiendo de su correspondiente share.</h5></div>
                         <div class="miExperiencia">
@@ -192,14 +192,17 @@
                 
             </div>
 </section>
+
+<!-- Quinta sección -->
+
     <!-- acá empieza mis habilidades -->
-    <!-- <section>
+    <section>
         <div class="quinta">
             <h2>Mis habilidades</h2>
         </div>
-</section>
-<section class="quintaBis">
-        <div>  
+    </section>
+    <section class="quintaBis">
+        <div class="porcentajesA">  
             <div>
                 <h3>Diseño Web<span>60%</span></h3>
             </div>
@@ -219,7 +222,7 @@
                 <div class="porcentaje3"></div>
             </div>
         </div>
-        <div>  
+        <div class="porcentajesB">  
             <div>
                 <h3>React<span>70%</span></h3>
             </div>
@@ -240,17 +243,17 @@
             </div>
         </div>
         
-</section>
-<section>
+    </section>
+    <section>
         <button class="botonCV">
             <a href="css/documents/CV 2021.pdf" download="CV 2021" target="_blank">DESCARGAR CV</a>
         </button>
-</section>
- -->
+    </section>
+
     <!-- Comienzo de Portfolio -->
 
 
-<!-- <section id="verPortfolio" class="sexta">
+<section id="verPortfolio" class="sexta">
         <p>
             Portfolio
         </p>
@@ -391,7 +394,7 @@
     <div class="septima">
         <h1>Interesado en trabajar conmigo?</h1>
         <button><a href="#verContacto"><strong>Contratame!</strong></a></button>
-    </div> -->
+    </div>
 </section>
 
 
