Solucionado tema imagenes de portfolio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="verInicio" class="primera">
             <div class="izquierda">
-                <h2>Hola, soy un freelancer</h2>
+                <h2>Hola, soy un freelancer.</h2>
                 <h1>SOY PROGRAMADOR!</h1>
                 <h3>Viviendo en Buenos Aires - Argentina</h3>
                 <div class="botones">
