--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
         
     </section>
-    <section>
+    <section class="deBotonCV">
         <button class="botonCV">
             <a href="css/documents/CV 2021.pdf" download="CV 2021" target="_blank">DESCARGAR CV</a>
         </button>
