Agrego menu desplegable

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
             <a href="#verPortfolio">PORTFOLIO</a>
             <a href="#verContacto">CONTACTO</a>
         </nav>
-        <i class="bi bi-list hamburguesa"></i>
+        <nav class="menuHamburguesa" id="menuHamb">
+            <ul class="botonesHamburguesa">
+                <li><a href="#verInicio">INICIO</a></li>
+                <li><a href="#verConoceme">CONOCEME</a></li>
+                <li><a href="#verServicios">SERVICIOS</a></li>
+                <li><a href="#verResumen">RESUMEN</a></li>
+                <li><a href="#verPortfolio">PORTFOLIO</a></li>
+                <li><a href="#verContacto">CONTACTO</a></li>
+            </ul>
+            <button id="cerrar" class="btnCerrar"><strong>CERRAR   <i class="bi bi-x-lg"></i></strong></button>
+        </nav>
+        <button class="hamburguesa" id="abrir"><i class="bi bi-list"></i></button>
         <div>
             <a href="https://github.com/Mianlo2386" target="_blank"><i class="bi bi-github estilo"></i></a>
             <a href="https://www.facebook.com/profile.php?id=1632407427" target="_blank"><i class="bi bi-facebook estilo"></i></a>
@@ -445,6 +456,6 @@
     </footer>           
 
     </main>
-    
+  <script src="JS/app.js"></script>  
 </body>
 </html>
