Cuando se hace click se cierra automaticamente el menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </nav>
         <nav class="menuHamburguesa" id="menuHamb">
             <ul class="botonesHamburguesa">
-                <li><a href="#verInicio">INICIO</a></li>
-                <li><a href="#verConoceme">CONOCEME</a></li>
-                <li><a href="#verServicios">SERVICIOS</a></li>
-                <li><a href="#verResumen">RESUMEN</a></li>
-                <li><a href="#verPortfolio">PORTFOLIO</a></li>
-                <li><a href="#verContacto">CONTACTO</a></li>
+                <li id="enlace1"><a href="#verInicio">INICIO</a></li>
+                <li id="enlace2"><a href="#verConoceme">CONOCEME</a></li>
+                <li id="enlace3"><a href="#verServicios">SERVICIOS</a></li>
+                <li id="enlace4"><a href="#verResumen">RESUMEN</a></li>
+                <li id="enlace5"><a href="#verPortfolio">PORTFOLIO</a></li>
+                <li id="enlace6"><a href="#verContacto">CONTACTO</a></li>
             </ul>
             <button id="cerrar" class="btnCerrar"><strong>CERRAR   <i class="bi bi-x-lg"></i></strong></button>
         </nav>
