Arreglo detalle de Node JS

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="porcentaje4"></div>
             </div>
             <div>
-                    <h3>Angular JS<span>60%</span></h3>
+                    <h3>Node JS<span>60%</span></h3>
             </div>
             <div class="barraDeProgreso">
                 <div class="porcentaje5"></div>
