--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <section id="verInicio" class="primera">
             <div class="izquierda">
-                <h2>Hola, soy un freelancer.</h2>
+                <h2>Hola, soy un desarrollador.</h2>
                 <h1>SOY PROGRAMADOR!</h1>
                 <h3>Viviendo en Buenos Aires - Argentina</h3>
                 <div class="botones">
@@ -333,12 +333,14 @@
                 </div>
     
                 <div class="contenedor-img">
-                        <img src="css/imagenes/criptomonedas.jpg" alt="" class="imagen-fondo">
+                        <img src="css/imagenes/pong3a.png" alt="" class="imagen-fondo">
+                        <a href="https://juego-pong-con-chatgpt-x9sqryo00-mianlos-projects.vercel.app/" target="_blank">
                         <div class="contenedor-texto">
-                        <i class="bi bi-currency-bitcoin estilo"></i>
-                        <h2 class="texto">Detalle de proyecto 5</h2>
-                        <h3>Categoría</h3>
+                        <i class="bi bi-joystick estilo"></i>
+                        <h2 class="texto">Juego PONG</h2>
+                        <h3>ChatGPT/JS/CSS</h3>
                         </div>
+                    </a>    
                 </div>
                 <div class="contenedor-img">
                         <img src="css/imagenes/collage2.jpg" alt="" class="imagen-fondo">
@@ -405,12 +407,14 @@
 
             <div class="contenedor-imagenes2">
                 <div class="contenedor-img2">
-                        <img src="css/imagenes/criptomonedas.jpg" alt="" class="imagen-fondo2">
-                        <div class="contenedor-texto2">
-                        <i class="bi bi-currency-bitcoin estilo"></i>
-                        <h2 class="texto2">Detalle de proyecto 5</h2>
-                        <h3>Categoría</h3>
-                        </div>
+                    <img src="css/imagenes/pong3a.png" alt="" class="imagen-fondo">
+                    <a href="https://juego-pong-con-chatgpt-x9sqryo00-mianlos-projects.vercel.app/" target="_blank">
+                    <div class="contenedor-texto">
+                    <i class="bi bi-joystick estilo"></i>
+                    <h2 class="texto">Juego PONG</h2>
+                    <h3>ChatGPT/JS/CSS</h3>
+                    </div>
+                </a> 
                 </div>
                 <div class="contenedor-img2">
                         <img src="css/imagenes/collage2.jpg" alt="" class="imagen-fondo2">
