--- a/index.html
+++ b/index.html
@@ -343,12 +343,14 @@
                     </a>    
                 </div>
                 <div class="contenedor-img">
-                        <img src="css/imagenes/collage2.jpg" alt="" class="imagen-fondo">
+                        <img src="css/imagenes/peluCani3.png" alt="" class="imagen-fondo">
+                        <a href="https://github.com/Mianlo2386/PeluqueriaCaninaTodoCode" target="_blank">
                         <div class="contenedor-texto">
                         <i class="bi bi-headphones estilo"></i>
-                        <h2 class="texto">Detalle de proyecto 6</h2>
-                        <h3>Categoría</h3>
+                        <h2 class="texto">Peluqueria Canina</h2>
+                        <h3>Java Swing</h3>
                         </div>
+                    </a>
                 </div>
             </div>
 
@@ -417,12 +419,14 @@
                 </a> 
                 </div>
                 <div class="contenedor-img2">
-                        <img src="css/imagenes/collage2.jpg" alt="" class="imagen-fondo2">
+                        <img src="css/imagenes/peluCani3.png" alt="" class="imagen-fondo2">
+                        <a href="https://github.com/Mianlo2386/PeluqueriaCaninaTodoCode" target="_blank">
                         <div class="contenedor-texto2">
                         <i class="bi bi-headphones estilo"></i>
-                        <h2 class="texto2">Detalle de proyecto 6</h2>
-                        <h3>Categoría</h3>
+                        <h2 class="texto2">Peluqueria Canina</h2>
+                        <h3>Java - Swing</h3>
                         </div>
+                        </a>
                 </div>
             </div>
     
