Se agrega porcentaje en Java

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <section class="quintaBis">
         <div class="porcentajesA">  
             <div>
-                <h3>Diseño Web<span>60%</span></h3>
+                <h3>Diseño Web<span>80%</span></h3>
             </div>
             <div class="barraDeProgreso">
                 <div class="porcentaje1"></div>
@@ -254,7 +254,7 @@
                 <div class="porcentaje5"></div>
             </div>
             <div>
-                     <h3>Bootstrap<span>95%</span></h3>
+                     <h3>Java<span>95%</span></h3>
             </div>
             <div class="barraDeProgreso">
                 <div class="porcentaje6"></div>
@@ -264,7 +264,7 @@
     </section>
     <section class="deBotonCV">
         <button class="botonCV">
-            <a href="css/documents/CV set 2023.pdf" download="CV 2023" target="_blank">DESCARGAR CV</a>
+            <a href="css/documents/CVoct 2024(2).pdf" download="CV 2023" target="_blank">DESCARGAR CV</a>
         </button>
     </section>
 
