Probando envio de formulario

--- a/index.html
+++ b/index.html
@@ -470,15 +470,16 @@
             </div>
             <div class="octava3">
                 <h1>Estimado de tu proyecto?</h1>
-                <form id="contactForm">
+                <form id="contactForm" action="https://formspree.io/miguellopez32@gmail.com" method="POST">
                     <label for="nombre"><strong>Cual es tu nombre?</strong></label>
-                    <input type="text" id="nombre" required>
+                    <input type="text" id="nombre" name="nombre" required>
                     <label for="email"><strong>Dirección de email:</strong></label>
-                    <input class="email" type="email" id="email" required>
+                    <input class="email" type="email" id="email" name="email" required>
                     <label for="mensaje"><strong>En qué puedo ayudarte?</strong></label>
-                    <textarea id="mensaje" required></textarea>
+                    <textarea id="mensaje" name="mensaje" required></textarea>
                     <button class="botonEnviar" type="submit">Enviar <i class="bi bi-arrow-right estilo"></i></button>
                 </form>
+                
                  
             </div>
         </div>
