Se oculta número de celular

--- a/index.html
+++ b/index.html
@@ -444,30 +444,21 @@
  <section id="verContacto">
         <div class="octava">
             <div class="octava2">
-                <h1>
-                    Mantengamonos en contacto.
-                </h1>
-                <h3>
-                    Disfruto discutir nuevos proyectos y desafíos de diseño. Comparta conmigo tanta información como sea posible para que podamos aprovechar al máximo nuestra primera puesta al día.
-                </h3>
-                <h3>
-                    <strong>Viviendo en:</strong> 
-                </h3>
+                <h1>Mantengamonos en contacto.</h1>
+                <h3>Disfruto discutir nuevos proyectos y desafíos de diseño. Comparta conmigo tanta información como sea posible para que podamos aprovechar al máximo nuestra primera puesta al día.</h3>
+                <h3><strong>Viviendo en:</strong></h3>
+                <p>Vicente López, Buenos Aires</p>
+                <h3><strong>Contáctame</strong></h3>
                 <p>
-                    Vicente López, Buenos Aires
-                </p>
-                <h3>
-                    <strong>Llamame</strong>
-                </h3>
-                <p>
-                    (+5411)6607-3505
+                    <a href="https://wa.me/541166073505" target="_blank">Contáctame en WhatsApp</a>
                 </p>
                 <div class="redes">
                     <a href="https://www.linkedin.com/in/miguel-lopez-206740205/" target="_blank"><i class="bi bi-linkedin estilo"></i></a>
-                    <a href="https://twitter.com/Leugimzepol?t=0rvajltvXgwrJBj1gNMxJA&s=09" target="_blank"><i class="bi bi-twitter estilo"></i></a> 
+                    <a href="https://twitter.com/Leugimzepol?t=0rvajltvXgwrJBj1gNMxJA&s=09" target="_blank"><i class="bi bi-twitter estilo"></i></a>
                     <a href="https://github.com/Mianlo2386" target="_blank"><i class="bi bi-github estilo"></i></a>
                 </div>
             </div>
+            
             <div class="octava3">
                 <h1>Estimado de tu proyecto?</h1>
                 <form id="contactForm" action="https://formspree.io/f/mbjepzer" method="POST">
