Se agrega icono de whatsapp

--- a/index.html
+++ b/index.html
@@ -448,9 +448,13 @@
                 <h3>Disfruto discutir nuevos proyectos y desafíos de diseño. Comparta conmigo tanta información como sea posible para que podamos aprovechar al máximo nuestra primera puesta al día.</h3>
                 <h3><strong>Viviendo en:</strong></h3>
                 <p>Vicente López, Buenos Aires</p>
-                <h3><strong>Contáctame</strong></h3>
+                <h3><strong>Contáctame por Whatsapp:</strong></h3>
                 <p>
-                    <a href="https://wa.me/541166073505" target="_blank">Contáctame en WhatsApp</a>
+                    <!-- <i class="bi bi-arrow-right estilo"></i> -->
+                    <a href="https://wa.me/541166073505" target="_blank" class="whatsapp-link">
+                        <i class="bi bi-whatsapp estilo"></i>
+                    </a>
+                
                 </p>
                 <div class="redes">
                     <a href="https://www.linkedin.com/in/miguel-lopez-206740205/" target="_blank"><i class="bi bi-linkedin estilo"></i></a>
